--- a/src/Birds/ObservationsBundle/Resources/views/Observations/mesObservations.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/Observations/mesObservations.html.twig
@@ -16,8 +16,86 @@
     {% if not is_granted('ROLE_NATURALIST') %}
 		<div class="row"><h4>Vos observations en attente de validation: {{ paramW.nbrRes }}</h4></div>
 		{% if observationsAttente %}
-			<div class="row text-right"> <!-- Limit -->
-				<ul class="list-inline">
+
+			<div class="row"> <!-- Limit -->
+				<ul class="list-inline col-xs-6">
+					<li><a href={{ path("birds_my_observations", {
+                            "page" : paramV.page,
+                            "limit": paramV.limit,
+                            "orderBy": paramV.orderBy,
+                            "page2" : 1,
+                            "limit2": paramW.limit,
+                            "orderBy2": paramW.orderBy
+                        }) }}>Première page</a></li>
+
+                    {% if pageActuelle-2 > 1 %}
+						<li>...</li>
+                    {% endif %}
+
+                    {% if paramW.page-2 > 0 %}
+						<li><a href={{ path("birds_my_observations", {
+                                "page" : paramV.page,
+                                "limit": paramV.limit,
+                                "orderBy": paramV.orderBy,
+                                "page2" : paramW.page-2,
+                                "limit2": paramW.limit,
+                                "orderBy2": paramW.orderBy
+                            }) }}>{{ paramW.page-2 }}</a></li>
+
+                    {% endif %}
+
+                    {% if paramW.page-1 > 0 %}			<!--Page -1 -->
+						<li><a href="{{ path("birds_my_observations", {
+                                "page" : paramV.page,
+                                "limit": paramV.limit,
+                                "orderBy": paramV.orderBy,
+                                "page2" : paramW.page-1,
+                                "limit2": paramW.limit,
+                                "orderBy2": paramW.orderBy
+                            }) }}">	{{ paramW.page-1 }}</a></li>
+                    {% endif %}
+
+					<li>{{ paramW.page }}</li>			<!--Page actuelle -->
+
+                    {% if paramW.page+1 <= paramW.nPages %} <!--Page +1 -->
+						<li><a href="{{ path("birds_my_observations", {
+                                "page" : paramV.page,
+                                "limit": paramV.limit,
+                                "orderBy": paramV.orderBy,
+                                "page2" : paramW.page+1,
+                                "limit2": paramW.limit,
+                                "orderBy2": paramW.orderBy
+                            }) }}">{{ paramW.page+1 }}</a></li>
+                    {% endif %}
+
+                    {% if paramW.page+2 <= paramW.nPages %} <!--Page +2 -->
+						<li><a href={{ path("birds_my_observations", {
+                                "page" : paramV.page,
+                                "limit": paramV.limit,
+                                "orderBy": paramV.orderBy,
+                                "page2" : paramW.page+2,
+                                "limit2": paramW.limit,
+                                "orderBy2": paramW.orderBy
+                            }) }}>{{ paramW.page+2 }}</a></li>
+                    {% endif %}
+
+                    {% if paramW.page+2 < paramW.nPages %} <!--Page ++ beyond -->
+						<li>...</li>
+                    {% endif %}
+
+
+					<li><a href={{ path("birds_my_observations", {
+                            "page" : paramV.page,
+                            "limit": paramV.limit,
+                            "orderBy": paramV.orderBy,
+                            "page2" : paramW.nPages,
+                            "limit2": paramW.limit,
+                            "orderBy2": paramW.orderBy
+                        }) }}>Dernière page</a></li>
+
+				</ul>
+
+				<ul class="list-inline col-xs-6 text-right">
 					<li>Afficher:</li>
 					<li><a href={{ path("birds_my_observations", {
                             "page" : paramV.page,
@@ -60,7 +138,7 @@
 				</ul>
 			</div>
 			<div class="row" >
-				<table class="table-striped table-bordered text-center col-sm-12">
+				<table class="table-hover  text-center col-sm-12">
 					<thead>
 					<tr>
 						<th>Lieu</th>
@@ -79,7 +157,7 @@
                                 "page2" : 1,
                                 "limit2": paramW.limit,
                                 "orderBy2": 2
-                            }) }}">Heure<span class="glyphicon glyphicon glyphicon-chevron-{% if paramW.orderBy == 2 %}down{% else %}right{% endif %}"></span></a></th>
+                            }) }}">Heure<span class="glyphicon glyphicon-chevron-{% if paramW.orderBy == 2 %}down{% else %}right{% endif %}"></span></a></th>
 						<th><a href="{{ path("birds_my_observations", {
                                 "page" : paramV.page,
                                 "limit": paramV.limit,
@@ -111,88 +189,14 @@
 								<a class="btn btn-xs btn-warning btn-block" href="{{ path("birds_observations_remove", {"id" : obs.id }) }}">Supprimer</a></td>
 							<div class="coords" hidden>{{ obs.latitude }};{{ obs.longitude }};{{ obs.id }}</div>
 						</tr>
+
                     {% endfor %}
 					</tbody>
 				</table>
 
 			</div>
 
-			<ul class="list-inline">
-				<li><a href={{ path("birds_my_observations", {
-						"page" : paramV.page,
-						"limit": paramV.limit,
-						"orderBy": paramV.orderBy,
-						"page2" : 1,
-						"limit2": paramW.limit,
-						"orderBy2": paramW.orderBy
-					}) }}>Première page</a></li>
 
-				{% if pageActuelle-2 > 1 %}
-					<li>...</li>
-				{% endif %}
-
-				{% if paramW.page-2 > 0 %}
-					<li><a href={{ path("birds_my_observations", {
-							"page" : paramV.page,
-							"limit": paramV.limit,
-							"orderBy": paramV.orderBy,
-							"page2" : paramW.page-2,
-							"limit2": paramW.limit,
-							"orderBy2": paramW.orderBy
-						}) }}>{{ paramW.page-2 }}</a></li>
-
-				{% endif %}
-
-				{% if paramW.page-1 > 0 %}			<!--Page -1 -->
-					<li><a href="{{ path("birds_my_observations", {
-							"page" : paramV.page,
-							"limit": paramV.limit,
-							"orderBy": paramV.orderBy,
-							"page2" : paramW.page-1,
-							"limit2": paramW.limit,
-							"orderBy2": paramW.orderBy
-						}) }}">	{{ paramW.page-1 }}</a></li>
-				{% endif %}
-
-				<li>{{ paramW.page }}</li>			<!--Page actuelle -->
-
-				{% if paramW.page+1 <= paramW.nPages %} <!--Page +1 -->
-					<li><a href="{{ path("birds_my_observations", {
-							"page" : paramV.page,
-							"limit": paramV.limit,
-							"orderBy": paramV.orderBy,
-							"page2" : paramW.page+1,
-							"limit2": paramW.limit,
-							"orderBy2": paramW.orderBy
-						}) }}">{{ paramW.page+1 }}</a></li>
-				{% endif %}
-
-				{% if paramW.page+2 <= paramW.nPages %} <!--Page +2 -->
-					<li><a href={{ path("birds_my_observations", {
-							"page" : paramV.page,
-							"limit": paramV.limit,
-							"orderBy": paramV.orderBy,
-							"page2" : paramW.page+2,
-							"limit2": paramW.limit,
-							"orderBy2": paramW.orderBy
-						}) }}>{{ paramW.page+2 }}</a></li>
-				{% endif %}
-
-				{% if paramW.page+2 < paramW.nPages %} <!--Page ++ beyond -->
-					<li>...</li>
-				{% endif %}
-
-
-				<li><a href={{ path("birds_my_observations", {
-						"page" : paramV.page,
-						"limit": paramV.limit,
-						"orderBy": paramV.orderBy,
-						"page2" : paramW.nPages,
-						"limit2": paramW.limit,
-						"orderBy2": paramW.orderBy
-					}) }}>Dernière page</a></li>
-
-			</ul>
 
 
         {% else %}
@@ -256,7 +260,7 @@
 				</ul>
 			</div>
 			<div class="row" >
-				<table class="table-striped table-bordered text-center col-sm-12">
+				<table class=" table-hover  text-center col-sm-12">
 					<thead>
 					<tr>
 						<th>Lieu</th>
