--- a/src/Birds/ObservationsBundle/Resources/views/Observations/modifierObservation.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/Observations/modifierObservation.html.twig
@@ -70,6 +70,8 @@
 						<div class="col-md-4" hidden>
                             {{ form_row(form.longitude)  }}
 						</div>
+
+						<div class="coords" hidden>{{ obs.latitude }};{{ obs.longitude }};{{ obs.id }}</div>
 					</div>
 
 				</div>
@@ -91,7 +93,7 @@
 {% endblock %}
 
 {% block js %}
-
+	<script>var page="modi";</script>
 	<script src={{ asset("js/observations/positionSelector.js") }}></script>
     {{ parent() }}
 
