Changing view of observation lists

--- a/src/Birds/ObservationsBundle/Resources/views/Observations/modifierObservation.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/Observations/modifierObservation.html.twig
@@ -54,7 +54,7 @@
                             {{ form_widget(form.image.file, {'attr':{'id':'selPic'}})}}
 						</div>
 						<div class="form-group global-marg-xs">
-                            {{ form_label(form.place,'Adresse') }} <p class="btn btn-info btn-xs text-right" id="useMyPos">Utiliser ma position</p>
+                            {{ form_label(form.place,'Adresse*') }} <p class="btn btn-info btn-xs text-right" id="useMyPos">Utiliser ma position</p>
                             {{ form_widget(form.place, {attr:{'id':'place'}}) }}
 
 						</div>
