--- a/src/Birds/ObservationsBundle/Resources/views/Observations/mesObservations.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/Observations/mesObservations.html.twig
@@ -4,7 +4,6 @@
 {% block content %}
 	<div class="row">
 		<h1>Mes observations</h1>
-
         {{ parent() }}
 	</div>
 
@@ -26,11 +25,9 @@
                             "page2" : 1,
                             "limit2": paramW.limit,
                             "orderBy2": paramW.orderBy
-                        }) }}>Première page</a></li>
+                        }) }}><span class="glyphicon glyphicon-arrow-left"></span></a></li>
 
-                    {% if pageActuelle-2 > 1 %}
-						<li>...</li>
-                    {% endif %}
+
 
                     {% if paramW.page-2 > 0 %}
 						<li><a href={{ path("birds_my_observations", {
@@ -91,7 +88,7 @@
                             "page2" : paramW.nPages,
                             "limit2": paramW.limit,
                             "orderBy2": paramW.orderBy
-                        }) }}>Dernière page</a></li>
+                        }) }}><span class="glyphicon glyphicon-arrow-right"></span></a></li>
 
 				</ul>
 
@@ -181,11 +178,11 @@
                     {%  for obs in observationsAttente %}
 						<tr class="observationLine" id="line-{{ obs.id }}">
 							<td>{{ obs.place }}</td>
-							<td>{{ obs.date | date('d m Y',"Europe/Paris") }}</td>
+							<td>{{ obs.date | date('d/m/Y',"Europe/Paris") }}</td>
 							<td>{{ obs.hour }}h</td>
 							<td>{{ obs.title }}</td>
 							<td><a  href={{ path("birds_observation", {"id": obs.id }) }}>{{ obs.birdname }} </a></td>
-							<td><a class="btn btn-xs btn-info btn-block" href="{{ path("birds_observations_update", {"id": obs.id}) }}">Modifier</a>
+							<td><a class="btn btn-xs btn-default btn-block" href="{{ path("birds_observations_update", {"id": obs.id}) }}">Modifier</a>
 								<a class="btn btn-xs btn-warning btn-block" href="{{ path("birds_observations_remove", {"id" : obs.id }) }}">Supprimer</a></td>
 							<div class="coords" hidden>{{ obs.latitude }};{{ obs.longitude }};{{ obs.id }}</div>
 						</tr>
@@ -201,7 +198,7 @@
 
         {% else %}
 			<p>Vous n'avez pas d'observations d'oiseaux en attente de validation. </p>
-			<button class="btn btn-info"><a href={{ path("birds_observations_add") }}>Ajouter une observation d'oiseau</a></button>
+			<button class="btn btn-default"><a href={{ path("birds_observations_add") }}>Ajouter une observation d'oiseau</a></button>
         {% endif %}
 		<hr>
 	{% endif %}
@@ -216,8 +213,81 @@
 	<div class="row"><h4>Vos observations valides: {{  paramV.nbrRes }}</h4></div>
 		{% if observations %}
 
-			<div class="row text-right"> <!-- Limit -->
-				<ul class="list-inline">
+			<div class="row"> <!-- Limit -->
+				<ul class="list-inline col-xs-6">
+					<li><a href={{ path("birds_my_observations", {
+                            "page" : 1,
+                            "limit": paramV.limit,
+                            "orderBy": paramV.orderBy,
+                            "page2" : paramW.page,
+                            "limit2": paramW.limit,
+                            "orderBy2": paramW.orderBy
+                        }) }}><span class="glyphicon glyphicon-arrow-left"></span></a></li>
+
+
+                    {% if paramV.page-2 > 0 %}
+						<li><a href={{ path("birds_my_observations", {
+                                "page" : paramV.page-2,
+                                "limit": paramV.limit,
+                                "orderBy": paramV.orderBy,
+                                "page2" : paramW.page,
+                                "limit2": paramW.limit,
+                                "orderBy2": paramW.orderBy
+                            }) }}>{{ paramV.page-2 }}</a></li>
+
+                    {% endif %}
+
+                    {% if paramV.page-1 > 0 %}			<!--Page -1 -->
+						<li><a href="{{ path("birds_my_observations", {
+                                "page" : paramV.page-1,
+                                "limit": paramV.limit,
+                                "orderBy": paramV.orderBy,
+                                "page2" : paramW.page,
+                                "limit2": paramW.limit,
+                                "orderBy2": paramW.orderBy
+                            }) }}">	{{ paramV.page-1 }}</a></li>
+                    {% endif %}
+
+					<li>{{ paramV.page }}</li>			<!--Page actuelle -->
+
+                    {% if paramV.page+1 <= paramV.nPages %} <!--Page +1 -->
+						<li><a href="{{ path("birds_my_observations", {
+                                "page" : paramV.page+1,
+                                "limit": paramV.limit,
+                                "orderBy": paramV.orderBy,
+                                "page2" : paramW.page,
+                                "limit2": paramW.limit,
+                                "orderBy2": paramW.orderBy
+                            }) }}">{{ paramV.page+1 }}</a></li>
+                    {% endif %}
+
+                    {% if paramV.page+2 <= paramV.nPages %} <!--Page +2 -->
+						<li><a href={{ path("birds_my_observations", {
+                                "page" : paramV.page+2,
+                                "limit": paramV.limit,
+                                "orderBy": paramV.orderBy,
+                                "page2" : paramW.page,
+                                "limit2": paramW.limit,
+                                "orderBy2": paramW.orderBy
+                            }) }}>{{ paramV.page+2 }}</a></li>
+                    {% endif %}
+
+                    {% if paramV.page+2 < paramV.nPages %} <!--Page ++ beyond -->
+						<li>...</li>
+                    {% endif %}
+
+
+					<li><a href={{ path("birds_my_observations", {
+                            "page" : paramV.nPages,
+                            "limit": paramV.limit,
+                            "orderBy": paramV.orderBy,
+                            "page2" : paramW.page,
+                            "limit2": paramW.limit,
+                            "orderBy2": paramW.orderBy
+                        }) }}><span class="glyphicon glyphicon-arrow-right"></span></a></li>
+
+				</ul>
+				<ul class="list-inline text-right col-xs-6">
 					<li>Afficher:</li>
 					<li><a href={{ path("birds_my_observations", {
 							"page" : 1,
@@ -303,12 +373,12 @@
 					{%  for obs in observations %}
 						<tr class="observationLine" id="line-{{ obs.id }}">
 							<td>{{ obs.place }}</td>
-							<td>{{ obs.date | date('d m Y',"Europe/Paris") }}</td>
+							<td>{{ obs.date | date('d/m/Y',"Europe/Paris") }}</td>
 							<td>{{ obs.hour }}h</td>
 							<td >{{ obs.title }}</td>
 							<td><a href={{ path("birds_observation", {"id": obs.id }) }}>{{ obs.birdname }} </a></td>
 							<td>
-								<a class="btn btn-xs btn-info btn-block" href="{{ path("birds_observations_update", {"id": obs.id}) }}">Modifier</a>
+								<a class="btn btn-xs btn-default btn-block" href="{{ path("birds_observations_update", {"id": obs.id}) }}">Modifier</a>
                                 {% if is_granted('ROLE_NATURALIST') %}
 									<a class="btn btn-xs btn-warning btn-block" href="{{ path("birds_observations_remove", {"id" : obs.id }) }}">Supprimer</a>
 								{% endif %}
@@ -323,86 +393,11 @@
 
 
 
-		<ul class="list-inline">
-			<li><a href={{ path("birds_my_observations", {
-                    "page" : 1,
-                    "limit": paramV.limit,
-                    "orderBy": paramV.orderBy,
-                    "page2" : paramW.page,
-                    "limit2": paramW.limit,
-                    "orderBy2": paramW.orderBy
-                }) }}>Première page</a></li>
 
-            {% if paramV.page-1 > 1 %}
-				<li>...</li>
-            {% endif %}
-
-            {% if paramV.page-2 > 0 %}
-				<li><a href={{ path("birds_my_observations", {
-                        "page" : paramV.page-2,
-                        "limit": paramV.limit,
-                        "orderBy": paramV.orderBy,
-                        "page2" : paramW.page,
-                        "limit2": paramW.limit,
-                        "orderBy2": paramW.orderBy
-                    }) }}>{{ paramV.page-2 }}</a></li>
-
-            {% endif %}
-
-            {% if paramV.page-1 > 0 %}			<!--Page -1 -->
-				<li><a href="{{ path("birds_my_observations", {
-                        "page" : paramV.page-1,
-                        "limit": paramV.limit,
-                        "orderBy": paramV.orderBy,
-                        "page2" : paramW.page,
-                        "limit2": paramW.limit,
-                        "orderBy2": paramW.orderBy
-                    }) }}">	{{ paramV.page-1 }}</a></li>
-            {% endif %}
-
-			<li>{{ paramV.page }}</li>			<!--Page actuelle -->
-
-            {% if paramV.page+1 <= paramV.nPages %} <!--Page +1 -->
-				<li><a href="{{ path("birds_my_observations", {
-                        "page" : paramV.page+1,
-                        "limit": paramV.limit,
-                        "orderBy": paramV.orderBy,
-                        "page2" : paramW.page,
-                        "limit2": paramW.limit,
-                        "orderBy2": paramW.orderBy
-                    }) }}">{{ paramV.page+1 }}</a></li>
-            {% endif %}
-
-            {% if paramV.page+2 <= paramV.nPages %} <!--Page +2 -->
-				<li><a href={{ path("birds_my_observations", {
-                        "page" : paramV.page+2,
-                        "limit": paramV.limit,
-                        "orderBy": paramV.orderBy,
-                        "page2" : paramW.page,
-                        "limit2": paramW.limit,
-                        "orderBy2": paramW.orderBy
-                    }) }}>{{ paramV.page+2 }}</a></li>
-            {% endif %}
-
-            {% if paramV.page+2 < paramV.nPages %} <!--Page ++ beyond -->
-				<li>...</li>
-            {% endif %}
-
-
-			<li><a href={{ path("birds_my_observations", {
-                    "page" : paramV.nPages,
-                    "limit": paramV.limit,
-                    "orderBy": paramV.orderBy,
-                    "page2" : paramW.page,
-                    "limit2": paramW.limit,
-                    "orderBy2": paramW.orderBy
-                }) }}>Dernière page</a></li>
-
-		</ul>
 
 	{% else %}
 		<p>Vous n'avez pas encore d'observations validées par un professionnel. </p>
-		<button class="btn btn-info"><a href={{ path("birds_observations_add") }}>Ajouter une observation d'oiseau</a></button>
+		<button class="btn btn-default"><a href={{ path("birds_observations_add") }}>Ajouter une observation d'oiseau</a></button>
 	{% endif %}
 
 {% endblock %}
