--- a/src/Birds/ObservationsBundle/Resources/views/observationLayout.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/observationLayout.html.twig
@@ -78,7 +78,7 @@
 	</div>
 
 {% endblock %}
-{% block foot %}{% endblock %}
+{% block foot %}{{ parent() }}{% endblock %}
 {% block js %}{{ parent() }}
 	<script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
 	<script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script> <!-- Permet de générer des routes en js.-->
