--- a/src/Birds/ObservationsBundle/Resources/views/Observations/lireObservation.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/Observations/lireObservation.html.twig
@@ -7,7 +7,7 @@
         </div>
         <div class="row global-marg-xs">
             <div class="col-md-offset-1 global-marg-xs">
-                <div class="col-md-3">
+                <div class="col-md-3 global-marg-xs">
 
                     <div class="global-marg-xs text-center">Auteur: {{ obs.user.username }}</div>
                     <div class="global-marg-xs text-center">Titre: "{% if obs.description == "" %}Sans titre{% else %}{{ obs.description }}{% endif %}"
