--- a/src/AppBundle/Resources/views/propos.html.twig
+++ b/src/AppBundle/Resources/views/propos.html.twig
@@ -11,7 +11,7 @@
         <div class="row missionRow">
             <div class="col-md-12">
                 <h2 class="text-center">Notre mission</h2>
-                <div class="col-md-3"> <div class="col-md-12">
+                <div class="col-md-3 videoPlace"> <div class="col-md-12">
                         <video class="col-md-12 col-sm-8 col-xs-12" width="300"  controls>
                             <source src="{{ asset('video/Le changement climatique menace l\'avifaune en Inde.mp4') }}" type="video/mp4">
                             Your browser doesn't support this kind of video.
