--- a/web/css/mainStyle.css
+++ b/web/css/mainStyle.css
@@ -262,8 +262,16 @@ body{
 
 td, th /*Tous les tableaux sont formatés ainsi*/
 {
-    border-right: solid beige 2px;
+    border-right: solid black 2px;
     min-width: 70px;
+    text-align: center;
+    padding-left: 3px;
+    padding-right: 3px;
+
+}
+td a, th a, td a:hover, th a:hover
+{
+    color:inherit;
 }
 table
 {
@@ -271,7 +279,8 @@ table
 
 }
 
-.btn, input[type=text], input[type=password],input[type=email]{
+
+.btn, input[type=text], input[type=password],input[type=email],input[type=search]{
     border-radius: 50px;
 }
 textarea{
@@ -289,7 +298,10 @@ margin-bottom: 5%;
 .global-marg-up{
     margin-top: 50px;
 }
-
+.global-marg-up-xs
+{
+    margin-top: 15px;
+}
 .global-marg-xs{
 margin-bottom: 30px;
 }
@@ -298,4 +310,15 @@ margin-bottom: 30px;
     .global-marg-xs{
         margin-bottom: 15px;
     }
+}
+
+[type="checkbox"], [type="checkbox"]:hover
+{
+    border:none;
+
+}
+input[type=checkbox]
+{
+    background-color: deepskyblue;
+    color: white;
 }
