--- a/web/css/special/mission.css
+++ b/web/css/special/mission.css
@@ -2,12 +2,22 @@ body {
 
 }
 
-@media screen and (max-width:640px)
+@media screen and (max-width:375px)
 {
     body {
         background-image: url("/BirdSafari/web/img/backgrounds/fond_mission_mobile.jpg");
         background-attachment: fixed;
 
     }
+}
+
+
+#videoPop
+{
+    background-color: transparent !important;
+}
+.videoPlace
+{
+    height: 300px;
 }
 
