Patch download (selective download override). Search by species.

--- a/src/Birds/ObservationsBundle/Resources/views/Observations/search.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/Observations/search.html.twig
@@ -15,7 +15,7 @@
 
         <div class="form-inline global-marg-up-xs global-marg-xs row">
             <label for="birdR" class="control-label">Espèces*</label>
-            <select class="birdnames form-control searchElt" name="birdR" id="birdR" multiple>
+            <select class="birdnames form-control" name="birdR" id="birdR">
                 <option value="0" selected="selected">Tous les oiseaux</option>
             </select>
         </div>
